update Further Tasks

--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
 
     <h1> Minesweeper </h1>
 
-    <p class="difficulty"><button class="smiley-btn" onclick="onInit()">😃</button></p> 
+    <div class="top">
+        <button class="smiley-btn" onclick="onInit()">😃</button>
+        <span class="lives"></span>
+    </div> 
     
     <div class="board-container"></div>
     
